--- a/.gitignore
+++ b/.gitignore
@@ -267,6 +267,27 @@ temp/
 *.old
 
 # ============================================================================
+# Project Structure Specific
+# ============================================================================
+# Python cache in all project directories (apis/, models/, services/, utils/, tests/)
+apis/__pycache__/
+models/__pycache__/
+services/__pycache__/
+utils/__pycache__/
+tests/__pycache__/
+
+# Test-specific files
+tests/.pytest_cache/
+tests/.coverage
+tests/htmlcov/
+
+# Generated PDFs and documents in storage
+storage/pdfs/*.pdf
+storage/pdfs/*.png
+storage/pdfs/*.jpg
+!storage/pdfs/.gitkeep
+
+# ============================================================================
 # Node.js (if using any Node tools)
 # ============================================================================
 node_modules/
